--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: My Projects
 email: delali.amina@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  All the tools I am building will be described in this website.
+  All the tools I will be building will be described in this website.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: amina_delali
