--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              your-email@example.com
 description:        Creating A Digital Business
 author:             Amina
 baseurl:            ""
-url:                "https://www.myititnerary.com/"
+url:                "https://www.myititnerary.com"
 
 # Social Profiles
 twitter_username:   amina_delali
