--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,7 @@ title:              My Itinerary
 email:              your-email@example.com
 description:        Creating A Digital Business
 author:             Amina
-baseurl:            ""
-url:                "https://Amina-Delali.github.io"
+url:                "https://www.myitinerary.com"
 
 # Social Profiles
 twitter_username:   amina_delali
