--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ url:                "https://www.myitinerary.com"
 
 # Social Profiles
 twitter_username:   amina_delali
-github_username:    amina_delali
-facebook_username:  Amina Journey
-instagram_username: AminasJourney
+github_username:    amina-delali
+facebook_username:  AminasJourney
+instagram_username: theothersideofthejourney
 linkedin_username:  amina-delali
 
 # Add your google-analytics ID here to activate google analytics
