--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              My Itinerary
 email:              your-email@example.com
 description:        Creating A Digital Business
-author:             Amina
+author:             Amina Delali
 url:                "https://www.myitinerary.com"
 
 # Social Profiles
