--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title:              My Itinerary
-email:              your-email@example.com
+email:              amina.delali2@gmail.com
 description:        Creating A Digital Business
 author:             Amina Delali
 url:                "https://www.myitinerary.com"
@@ -15,6 +15,7 @@ linkedin_username:  amina-delali
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
 
 # Build settings
+future: true
 markdown:           kramdown
 paginate:           5
 paginate_path:      "/posts/page:num/"
