automatically centering post

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              My Itinerary
 email:              amina.delali2@gmail.com
-description:        Creating A Digital Business
+description:        Learning While Creating A Digital Business
 author:             Amina Delali
 url:                "https://www.myitinerary.com"
 
