--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,3 +1,9 @@
 {
-  "accentColor": ""
+  "accentColor": "",
+  "theme": "moonstone",
+  "cssTheme": "AnuPpuccin",
+  "enabledCssSnippets": [
+    "custom-rainbow-colors",
+    "extended-colorschemes"
+  ]
 }
