fixing insta link

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:                "https://www.myitinerary.com"
 twitter_username:   amina_delali
 github_username:    amina-delali
 facebook_username:  AminasJourney
-instagram_username: theothersideofthejourney
+instagram_username: amina.delali/
 linkedin_username:  amina-delali
 
 # Add your google-analytics ID here to activate google analytics
